Replace ES6 module script with non-module version
Updated index.html to use main_fixed.js instead of the ES6 module main.js for improved compatibility. Added main_fixed.js with all game logic in a single file, removing ES6 imports and ensuring the game runs without module support.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       Cargando juego...
     </div>
 
-    <!-- Scripts del juego (tipo module para ES6) -->
-    <script type="module" src="./src/js/main.js"></script>
+    <!-- Scripts del juego (versión corregida sin módulos ES6) -->
+    <script src="./src/js/main_fixed.js"></script>
 
     <!-- Service Worker para PWA (futuro) -->
     <!-- <script>
