Refactor main.js to inline config and enhance debugging
Migrates game configuration and utility functions directly into main.js to avoid ES6 module import issues. Adds extensive debugging logs, improves error handling for assets, refines UI rendering, and updates index.html to use main.js instead of main_fixed.js. Removes debug info from UI in main_fixed.js for consistency.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       Cargando juego...
     </div>
 
-    <!-- Scripts del juego (versión corregida sin módulos ES6) -->
-    <script src="./src/js/main_fixed.js"></script>
+    <!-- Scripts del juego -->
+    <script src="./src/js/main.js"></script>
 
     <!-- Service Worker para PWA (futuro) -->
     <!-- <script>
