Add ES6 classes for Bird, Pipe, PipePool, and Game
Migrated game logic to modular ES6 classes: Bird, Pipe, PipePool, and Game. Updated index.html to load new class scripts and main_new.js, enabling improved structure and maintainability for the Flappy Bird game.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
       Cargando juego...
     </div>
 
-    <!-- Scripts del juego -->
-    <script src="./src/js/main.js"></script>
+    <!-- Scripts del juego (clases ES6) -->
+    <script src="./src/js/classes/Bird.js"></script>
+    <script src="./src/js/classes/Pipe.js"></script>
+    <script src="./src/js/classes/PipePool.js"></script>
+    <script src="./src/js/classes/Game.js"></script>
+    <script src="./src/js/main_new.js"></script>
 
     <!-- Service Worker para PWA (futuro) -->
     <!-- <script>
