--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <script src="./src/js/classes/Pipe.js"></script>
     <script src="./src/js/classes/PipePool.js"></script>
     <script src="./src/js/classes/Game.js"></script>
-    <script src="./src/js/main_new.js"></script>
+    <script src="./src/js/main.js"></script>
 
     <!-- Service Worker para PWA (futuro) -->
     <!-- <script>
